@@ -203,7 +203,9 @@ namespace Banshee.Base
             
             Status = AudioCdLookupStatus.SearchingCoverArt;
             
-            if(AmazonCoverFetcher.Fetch(asin, Paths.CoverArtDirectory)) {
+            Banshee.Metadata.MusicBrainz.MusicBrainzQueryJob cover_art_job =
+                new Banshee.Metadata.MusicBrainz.MusicBrainzQueryJob(tracks[0], asin);
+            if(cover_art_job.Lookup()) {
                 HandleUpdated();
             }
             
